--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Pintoluc/lsbturismo.git"
+    "url": "git+https://github.com/wilsonprestes/laurel.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "bugs": {
-    "url": "https://github.com/Pintoluc/lsbturismo/issues"
+    "url": "https://github.com/wilsonprestes/laurel/issues"
   },
-  "homepage": "https://lsbturismo.com"
+  "homepage": "https://laureltraslados.com"
 }
